Added more things, styled more things

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -1,69 +1,95 @@
 <link href="../style.css" rel="stylesheet">
 <html>
 	<head>
-		<title>COP 4813: Internet Programming</title>
+		<title>COP 4813: Internet Programming: About Me</title>
 	</head>
 	<body>
-	<div class="left">
-		<img src="imgs/me.jpg" style="width: 40%; height: 40%;"></img>
-	</div>
-	<div class="center">
-		<h3>
-			Krishna Glick | <a href="mailto:unstoppable411@gmail.com">Email</a>
-		</h3>
-		<div class="sub-left">
-			<font size="3" color="blue" face="verdana">
-				About Me
-			</font>
-			<p>
-				My name is Krishna Glick. That's Indian, as in the subcontinent, not the fucking scrubs who were owned by the white man.
-				<br><br>
-				My parents are Jewish by ancestry but converted to Hinduism which is why I have my name. I was born and raised for a while in Miami, but then moved to this quaint as fuck little town named Alachua which is just north of bum fuck nowhere, I mean Gainesville.
-				<br><br>
-				Currently I'm wasting my time writing this shit for this dumbass class which will be easy as fuck cause I currently #SWAG IT UP AT A REAL FUCKING WEB DEV JOB YOU FUCKING RETARD TEACHER!
-				<br><br>
-				I get paid baller money as well, probably almost as well as you do WHILE STILL IN SCHOOL. THAT'S HOW FUCKING GOOD I AM BITCH.
-				<br><br>
-				In the future I will make more money and you still will be a scrub.
-			</p>
+		<div class="left">
+			<a href="../index.html">Home</a>
 		</div>
-		
-		<div class="sub-right">
-			<ul>
-				<li><a href="http://www.reddit.com/">Reddit</a></li>
-				<li><a href="http://dayoftheshirt.com/">Day of the Shirt</a></li>
-				<li><a href="http://www.thehelper.net/">TheHelper</a></li>
-			</ul>
-		</div>
-		
-		<table>
-				<tr>
-					<th colspan="3">
-						<font size="3" color="blue" face="verdana">
-							Class Schedule
-						</font>
-					</th>
-				</tr>
-				<tr>
-					<td>
-						Monday
-					</td>
-					<td>
-						Principles of Financial Accounting - ACG 2021 : 1:30pm-2:45pm
-					</td>
-					<td>
-						Introduction to Management Information Systems - ISM 4011 : 3PM-4:15PM
-					</td>
-				</tr>
-				<tr>
-					<td>
-						Tuesday
-					</td>
-					<td>
-						Work 10AM-6PM
-					</td>
-				</tr>
+		<div class="center">
+			<h3>
+				Krishna Glick | <a href="mailto:unstoppable411@gmail.com">Email</a>
+			</h3>
+			<div class="sub-left">
+				<h3>
+					About Me
+				</h3>
+				<p>
+					My name is Krishna Glick. That's Indian, as in the subcontinent, not the fucking scrubs who were owned by the white man.
+					<br><br>
+					My parents are Jewish by ancestry but converted to Hinduism which is why I have my name. I was born and raised for a while in Miami, but then moved to this quaint as fuck little town named Alachua which is just north of bum fuck nowhere, I mean Gainesville.
+					<br><br>
+					Currently I'm wasting my time writing this shit for this dumbass class which will be easy as fuck cause I currently #SWAG IT UP AT A REAL FUCKING WEB DEV JOB YOU FUCKING RETARD TEACHER!
+					<br><br>
+					I get paid baller money as well, probably almost as well as you do WHILE STILL IN SCHOOL. THAT'S HOW FUCKING GOOD I AM BITCH.
+					<br><br>
+					In the future I will make more money and you still will be a scrub.
+				</p>
+				
+			<table width="100%">
+				<thead>
+					<tr>
+						<th colspan="2">
+							<font size="3" color="blue" face="verdana">
+								Class Schedule
+							</font>
+						</th>
+					</tr>
+				</thead>
+				<tbody class="classes">
+					<tr>
+						<td>
+							Work
+						</td>
+						<td>
+							10am-6pm THF
+						</td>
+					</tr>
+					<tr>
+						<td>
+							ACG 2021: Principles of Financial Accounting
+						</td>
+						<td>
+							1:30pm-2:45pm MW
+						</td>
+					</tr>
+					<tr>
+						<td>
+							ISM 4011: Introduction to Management Information Systems
+						</td>
+						<td>
+							3pm-4:15pm MW
+						</td>
+					</tr>
+					<tr>
+					</tr>
+						<td>
+							WOH 1012: World History I
+						</td>
+						<td>
+							Online - TBA
+						</td>
+					<tr>
+						<td>
+							COP 4813: Internet Programming
+						</td>
+						<td>
+							Online 5PM Thursdays AKA SUM BULLSHIT
+						</td>
+					</tr>
+				</tbody>
 			</table>
-	</div>
+			</div>
+			
+			<div class="sub-right">
+				<ul>
+					<li><a href="http://www.reddit.com/">Reddit</a></li>
+					<li><a href="http://dayoftheshirt.com/">Day of the Shirt</a></li>
+					<li><a href="http://www.thehelper.net/">TheHelper</a></li>
+				</ul>
+				<img class="self" src="imgs/me.jpg"></img>
+			</div>
+		</div>
 	</body>
 </html>
