--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <link href="style.css" rel="stylesheet">
 <html>
 	<head>
-		<title>COP 4813: Internet Programming</title>
+		<title>COP 4813: Internet Programming: Home</title>
 	</head>
 	<body>
 		<div class="center">
