--- a/assign1/index.html
+++ b/assign1/index.html
@@ -31,7 +31,7 @@
 				<thead>
 					<tr>
 						<th colspan="2">
-							<font size="3" color="blue" face="verdana">
+							<font size="3" color="green" face="verdana">
 								Class Schedule
 							</font>
 						</th>
