Done minus actually having legit text.

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -1,11 +1,13 @@
-<link href="../style.css" rel="stylesheet">
 <html>
 	<head>
+		<link href="../style.css" rel="stylesheet">
 		<title>COP 4813: Internet Programming: About Me</title>
 	</head>
 	<body>
 		<div class="left">
 			<a href="../index.html">Home</a>
+			<br>
+			<a href="#">Assignment 1</a>
 		</div>
 		<div class="center">
 			<h3>
