Cleaned up language

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -18,15 +18,15 @@
 					About Me
 				</h3>
 				<p>
-					My name is Krishna Glick. That's Indian, as in the subcontinent, not the fucking scrubs who were owned by the white man.
+					My name is Krishna Glick. While the name is Indian, I am not.
 					<br><br>
-					My parents are Jewish by ancestry but converted to Hinduism which is why I have my name. I was born and raised for a while in Miami, but then moved to this quaint as fuck little town named Alachua which is just north of bum fuck nowhere, I mean Gainesville.
+					My parents were born Jewish but converted to Hinduism in their mid twenties. They've been vegetarians ever since, and raised myself and my sister in that environment.
 					<br><br>
-					Currently I'm wasting my time writing this shit for this dumbass class which will be easy as fuck cause I currently #SWAG IT UP AT A REAL FUCKING WEB DEV JOB YOU FUCKING RETARD TEACHER!
+					At present, I'm working towards a degree in Information Systems and am expecting to graduate in Spring on 2016. While I only have a handful of credits left to complete, Information Systems requires two sequential capstone courses which forces me into an extra semester.
 					<br><br>
-					I get paid baller money as well, probably almost as well as you do WHILE STILL IN SCHOOL. THAT'S HOW FUCKING GOOD I AM BITCH.
+					Additionally, I am employed by a company in downtown Jacksonville called Ascentis. Formerly Starfield, we were recently purchased and are growing exponentially. I am employed as a Software Engineer and spend my time working with our .NET application. We are a small company and my experience with newer front end technologies has put me at the forefront of our integration efforts with Ascentis at large.
 					<br><br>
-					In the future I will make more money and you still will be a scrub.
+					I hope to maintain my position at Ascentis throughout my schooling, and continue there for some time after graduating. While I currently exist as a developer, I seek to move into management at some point which Ascentis may or may not be able to provide. Regardless, the experience I gather there will help me in my career.
 				</p>
 				
 			<table width="100%">
@@ -77,7 +77,7 @@
 							COP 4813: Internet Programming
 						</td>
 						<td>
-							Online 5PM Thursdays AKA SUM BULLSHIT
+							Online - 5PM Thursdays 
 						</td>
 					</tr>
 				</tbody>
