--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 			</h2>
 			
 			<p>
-				This is assignment 1. It's utter trash, and hella ez. 420 blaze it faggot
-				#SWAG
+				Assignment 1 introduces students to the very basics of html, css, and how to structure pages and applications.
 			</p>
 			<ul>
-				<li>Objective 1: Not be retard with html</li>
-				<li>Objective 2: Please the shitty teacher</li>
-				<li>Objective 3: Fuck wasting my time on this pussy shit</li>
+				<li>Objective 1: Create and link together functional html pages</li>
+				<li>Objective 2: Create and use css files to provide global styling to an application</li>
+				<li>Objective 3: Begin creating a portfolio to assist with potential employment</li>
 			</ul>
 			
 			<hr>
