--- a/assign1/index.html
+++ b/assign1/index.html
@@ -86,9 +86,9 @@
 			
 			<div class="sub-right">
 				<ul>
-					<li><a href="http://www.reddit.com/">Reddit</a></li>
-					<li><a href="http://dayoftheshirt.com/">Day of the Shirt</a></li>
-					<li><a href="http://www.thehelper.net/">TheHelper</a></li>
+					<li><a href="http://www.reddit.com/" target="_blank">Reddit</a></li>
+					<li><a href="http://dayoftheshirt.com/" target="_blank">Day of the Shirt</a></li>
+					<li><a href="http://www.thehelper.net/" target="_blank">TheHelper</a></li>
 				</ul>
 				<img class="self" src="imgs/me.jpg"></img>
 			</div>
