--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 			</ul>
 			
 			<hr>
+			
+			<h2>
+				<a href="assign2/index.html">Assignment 2</a>
+			</h2>
+			
+			<hr>
 		</div>
 	</body>
 </html>
