Yeah, fixed weird styling issue! Also improved assign1, is ready for submission now.

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -8,6 +8,8 @@
 			<a href="../index.html">Home</a>
 			<br>
 			<a href="#">Assignment 1</a>
+			<br>
+			<a href="../assign2/index.html">Assignment 2</a>
 		</div>
 		<div class="center">
 			<h3>
@@ -70,14 +72,14 @@
 							WOH 1012: World History I
 						</td>
 						<td>
-							Online - TBA
+							Online - No Scheduled Times
 						</td>
 					<tr>
 						<td>
 							COP 4813: Internet Programming
 						</td>
 						<td>
-							Online - 5PM Thursdays 
+							Online - 5PM Every Other Thursday
 						</td>
 					</tr>
 				</tbody>
@@ -90,7 +92,7 @@
 					<li><a href="http://dayoftheshirt.com/" target="_blank">Day of the Shirt</a></li>
 					<li><a href="http://www.thehelper.net/" target="_blank">TheHelper</a></li>
 				</ul>
-				<img class="self" src="imgs/me.jpg"></img>
+				<img class="self" src="https://scontent-a-atl.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/10269629_10202163276108466_5778834372489667247_n.jpg?oh=f350afafb5a8e26e7773272cc564264f&oe=55291833"></img>
 			</div>
 		</div>
 	</body>
