Added flow chart, and added relative path for image.

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -92,7 +92,7 @@
 					<li><a href="http://dayoftheshirt.com/" target="_blank">Day of the Shirt</a></li>
 					<li><a href="http://www.thehelper.net/" target="_blank">TheHelper</a></li>
 				</ul>
-				<img class="self" src="https://scontent-a-atl.xx.fbcdn.net/hphotos-xfp1/v/t1.0-9/10269629_10202163276108466_5778834372489667247_n.jpg?oh=f350afafb5a8e26e7773272cc564264f&oe=55291833"></img>
+				<img class="self" src="imgs/me.jpg"></img>
 			</div>
 		</div>
 	</body>
