--- a/assign2/index.html
+++ b/assign2/index.html
@@ -21,6 +21,7 @@
 		</div>
 		<div class="center">
 			<span class="grid">
+				<h2>Employment Application | <a href="flowchart.jpg">Flowchart</a></h2>
 				<span>First Name</span><span class="grid-15">Last Name</span><br>
 				<span><input type="text" id="firstName" ></span>
 				<span class="grid-15"><input type="text" id="lastName" ></span><br>
