--- a/assign3/index.html
+++ b/assign3/index.html
@@ -1,15 +1,11 @@
 <html>
 	<head>
-		<script src="app.js" type="text/javascript"></script>
-		<link href="../style.css" rel="stylesheet">
-		<link href="../grid.css" rel="stylesheet">
+		<script src="../bootstrap.min.js" type="text/javascript"></script>
+		<script src="../jquery.min.js" type="text/javascript"></script>
+		<script src="../knockout.min.js" type="text/javascript"></script>
+		<script src="Statistics.js" type="text/javascript"></script>
+		<link href="../bootstrap.min.css" rel="stylesheet">
 		<title>COP 4813: Internet Programming: About Me</title>
-			<style>
-				br
-				{
-					line-height: 25px;
-				}
-			</style>
 	</head>
 	<body>
 		<div class="left">
