--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 			</h2>
 			
 			<hr>
+			
+			<h2>
+				<a href = "assign3/index.html">Assignment 3</a>
+			</h2>
+			
+			<hr>
 		</div>
 	</body>
 </html>
