--- a/assign1/index.html
+++ b/assign1/index.html
@@ -10,6 +10,8 @@
 			<a href="#">Assignment 1</a>
 			<br>
 			<a href="../assign2/index.html">Assignment 2</a>
+			<br>
+			<a href="../assign3/index.html">Assignment 3</a>
 		</div>
 		<div class="center">
 			<h3>
