--- a/assign2/index.html
+++ b/assign2/index.html
@@ -3,7 +3,7 @@
 		<script src="app.js" type="text/javascript"></script>
 		<link href="../style.css" rel="stylesheet">
 		<link href="../grid.css" rel="stylesheet">
-		<title>COP 4813: Internet Programming: About Me</title>
+		<title>COP 4813: Internet Programming: Employment Application</title>
 			<style>
 				br
 				{
