Assignment 4 begun. Canvas objects are being created, but they are not moving.

--- a/assign3/index.html
+++ b/assign3/index.html
@@ -23,6 +23,9 @@
 			<a class="active item" href="#">
 				<i class="circle icon"></i> Assignment 3
 			</a>
+			<a class="item" href="../assign4/index.html">
+				<i class="circle thin icon"></i> Assignment 4
+			</a>
 		</div>
 		
 		<div class="ui grid">
