--- a/assign4/index.html
+++ b/assign4/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<script src="../assets/jquery.min.js" type="text/javascript"></script>
 		<script src="../assets/semantic.min.js" type="text/javascript"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/fabric.js/1.4.0/fabric.min.js" type="text/javascript"></script>
 		<script src="assign4.js" type="text/javascript"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.7.3/semantic.css" />
 		<link href="assign4.css" rel="stylesheet">
