--- a/index.html
+++ b/index.html
@@ -1,45 +1,63 @@
 <html>
 	<head>
-		<link href="style.css" rel="stylesheet">
-		<title>COP 4813: Internet Programming: Home</title>
+		<script src="assets/jquery.min.js" type="text/javascript"></script>
+		<script src="assets/knockout.min.js" type="text/javascript"></script>
+		<script src="assets/semantic.min.js" type="text/javascript"></script>
+		<script src="HomeViewModel.js" type="text/javascript"></script>
+		<script src="HomeViewController.js" type="text/javascript"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.7.3/semantic.css" />
+		<title data-bind="value: pageTitle"></title>
 	</head>
 	<body>
-		<div class="center">
-			<h1>
-				ePortfolio for COP 4813: Internet Programming
-			</h1>
-			<h3>
-				Krishna Glick
-			</h3>
-			
-			<hr>
-			
-			<h2>
-				<a href="assign1/index.html">Assignment 1</a>
-			</h2>
-			
-			<p>
-				Assignment 1 introduces students to the very basics of html, css, and how to structure pages and applications.
-			</p>
-			<ul>
-				<li>Objective 1: Create and link together functional html pages</li>
-				<li>Objective 2: Create and use css files to provide global styling to an application</li>
-				<li>Objective 3: Begin creating a portfolio to assist with potential employment</li>
-			</ul>
-			
-			<hr>
-			
-			<h2>
-				<a href="assign2/index.html">Assignment 2</a>
-			</h2>
-			
-			<hr>
-			
-			<h2>
-				<a href = "assign3/index.html">Assignment 3</a>
-			</h2>
-			
-			<hr>
+		<div class="ui top attached inverted menu">
+			<div class="ui dropdown item">
+				<div class="text">
+					<i class="home icon"></i> Home
+				</div>
+				<i class="dropdown icon"></i>
+				<div class="menu">
+					<a class="item home">
+						<i class="home icon"></i>
+						<span>Home</span>
+					</a>
+
+					<div class="header">Assignments</div>
+
+					<a class="item assign1">
+						<i class="circle thin icon"></i>
+						<span>Assignment 1</span>
+					</a>
+					<a class="item assign2">
+						<i class="circle thin icon"></i>
+						<span>Assignment 2</span>
+					</a>
+					<a class="item assign3">
+						<i class="circle thin icon"></i>
+						<span>Assignment 3</span>
+					</a>
+					<a class="item assign4">
+						<i class="circle thin icon"></i>
+						<span>Assignment 4</span>
+					</a>
+					<a class="item assign5">
+						<i class="thin circle icon"></i>
+						<span>Assignment 5</span>
+					</a>
+				</div>
+			</div>
+
+			<div class="right menu">
+				<div class="item">
+					Krishna Glick
+				</div>
+				<div class="item">
+					ePortfolio for COP 4813: Internet Programming
+				</div>
+			</div>
 		</div>
+
+		<div class="assignmentSpace">
+		</div>
+
 	</body>
 </html>
