--- a/assign1/index2.html
+++ b/assign1/index2.html
@@ -1,22 +1,32 @@
-<div class="ui left aligned grid" style="width: 60%; margin-left: 20%;">
+<div class="ui left aligned grid">
 	<div class="sixteen wide column">
 		<h2>Krishna Glick | <a href="mailto:unstoppable411@gmail.com">Email</a></h2>
 	</div>
-	<div class="sixteen wide column">
+	<div class="four wide column"></div>
+	<div class="eight wide column">
 		<h3>About Me</h3>
 	</div>
-	<div class="sixteen wide column">
+	<div class="four wide column">
+		asdf
+		<img class="self" src="./imgs/me.jpg"></img>
+	</div>
+	<div class="four wide column"></div>
+	<div class="four wide column">
 		My parents were born Jewish but converted to Hinduism in their mid twenties. They've been vegetarians ever since, and raised myself and my sister in that environment.
 	</div>
-	<div class="sixteen wide column">
+	<div class="twelve wide column"></div>
+	<div class="eight wide column">
 		At present, I'm working towards a degree in Information Systems and am expecting to graduate in Spring on 2016. While I only have a handful of credits left to complete, Information Systems requires two sequential capstone courses which forces me into an extra semester.
 	</div>
-	<div class="sixteen wide column">
+	<div class="eight wide column"></div>
+	<div class="eight wide column">
 		Additionally, I am employed by a company in downtown Jacksonville called Ascentis. Formerly Starfield, we were recently purchased and are growing exponentially. I am employed as a Software Engineer and spend my time working with our .NET application. We are a small company and my experience with newer front end technologies has put me at the forefront of our integration efforts with Ascentis at large.
 	</div>
-	<div class="sixteen wide column">
+	<div class="eight wide column"></div>
+	<div class="eight wide column">
 		I hope to maintain my position at Ascentis throughout my schooling, and continue there for some time after graduating. While I currently exist as a developer, I seek to move into management at some point which Ascentis may or may not be able to provide. Regardless, the experience I gather there will help me in my career.
 	</div>
+	<div class="four wide column"></div>
 	<div class="sixteen wide column">
 		<h3>Favorite Websites</h3>
 	</div>
