Got some of it working

--- a/assign1/index.html
+++ b/assign1/index.html
@@ -94,7 +94,7 @@
 					<li><a href="http://dayoftheshirt.com/" target="_blank">Day of the Shirt</a></li>
 					<li><a href="http://www.thehelper.net/" target="_blank">TheHelper</a></li>
 				</ul>
-				<img class="self" src="imgs/me.jpg"></img>
+				<img class="self" src="assign1/imgs/me.jpg"></img>
 			</div>
 		</div>
 	</body>
