--- a/assign1/index2.html
+++ b/assign1/index2.html
@@ -1,21 +1,28 @@
-<div class="ui left aligned grid">
-	<div class="sixteen wide column">
-		<h2>Krishna Glick | <a href="mailto:unstoppable411@gmail.com">Email</a></h2>
+<div class="ui centered grid">
+	<div class="six column row">
+		<div class="column"></div>
+		<div class="two column">
+			<h2>Krishna Glick | <a href="mailto:unstoppable411@gmail.com">Email</a></h2>
+		</div>
+		<div class="column"></div>
+		<div class="column"></div>
+		<div class="column">
+			<img class="self" src="assign1/imgs/me.jpg"></img>
+		</div>
 	</div>
-	<div class="four wide column"></div>
-	<div class="eight wide column">
+	<!--<div class="four wide column"></div>
+	<div class="seven wide column">
 		<h3>About Me</h3>
 	</div>
-	<div class="four wide column">
-		asdf
-		<img class="self" src="./imgs/me.jpg"></img>
+	<div class="five wide column">
+		<img class="self" src="assign1/imgs/me.jpg"></img>
 	</div>
 	<div class="four wide column"></div>
-	<div class="four wide column">
+	<div class="eight wide column">
 		My parents were born Jewish but converted to Hinduism in their mid twenties. They've been vegetarians ever since, and raised myself and my sister in that environment.
 	</div>
-	<div class="twelve wide column"></div>
-	<div class="eight wide column">
+	<div class="eight wide column"></div>
+	<div class="twleve wide column">
 		At present, I'm working towards a degree in Information Systems and am expecting to graduate in Spring on 2016. While I only have a handful of credits left to complete, Information Systems requires two sequential capstone courses which forces me into an extra semester.
 	</div>
 	<div class="eight wide column"></div>
@@ -62,5 +69,5 @@
 		<div class="column">
 			Work: Tuesday/Thursday/Friday, 10AM-6PM
 		</div>
-	</div>
+	</div>-->
 </div>
