--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<script src="assets/semantic.min.js" type="text/javascript"></script>
 		<script src="HomeViewModel.js" type="text/javascript"></script>
 		<script src="HomeViewController.js" type="text/javascript"></script>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.7.3/semantic.css" />
+		<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.7.3/semantic.css" />-->
+		<link rel="stylesheet" href="assets/semantic.min.css" />
 		<link rel="stylesheet" href="style.css" />
 		<title data-bind="text: pageTitle"></title>
 	</head>
@@ -24,7 +25,7 @@
 
 					<div class="header">Assignments</div>
 
-					<a class="item assign1" data-route="assign1/index.html">
+					<a class="item assign1" data-route="assign1/index2.html">
 						<i class="circle thin icon"></i>
 						<span>Assignment 1</span>
 					</a>
