Split out some of the html elements, making this project even cooler. Home page is coming along well, need to refactor projects 2-4 to support new setup, and continue work on 5

--- a/assign1/index2.html
+++ b/assign1/index2.html
@@ -1,73 +1,103 @@
 <div class="ui centered grid">
-	<div class="six column row">
-		<div class="column"></div>
-		<div class="two column">
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="seven wide column">
+			<h2>About Me</h2>
+		</div>
+	</div>
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="four wide column">
 			<h2>Krishna Glick | <a href="mailto:unstoppable411@gmail.com">Email</a></h2>
 		</div>
-		<div class="column"></div>
-		<div class="column"></div>
-		<div class="column">
+		<div class="six wide column">
 			<img class="self" src="assign1/imgs/me.jpg"></img>
 		</div>
 	</div>
-	<!--<div class="four wide column"></div>
-	<div class="seven wide column">
-		<h3>About Me</h3>
+
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="seven wide column">
+			My parents were born Jewish but converted to Hinduism in their mid twenties. They've been vegetarians ever since, and raised myself and my sister in that environment.
+		</div>
 	</div>
-	<div class="five wide column">
-		<img class="self" src="assign1/imgs/me.jpg"></img>
+
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="seven wide column">
+			At present, I'm working towards a degree in Information Systems and am expecting to graduate in Spring on 2016. While I only have a handful of credits left to complete, Information Systems requires two sequential capstone courses which forces me into an extra semester.
+		</div>
 	</div>
-	<div class="four wide column"></div>
-	<div class="eight wide column">
-		My parents were born Jewish but converted to Hinduism in their mid twenties. They've been vegetarians ever since, and raised myself and my sister in that environment.
+
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="seven wide column">
+			Additionally, I am employed by a company in downtown Jacksonville called Ascentis. Formerly Starfield, we were recently purchased and are growing exponentially. I am employed as a Software Engineer and spend my time working with our .NET application. We are a small company and my experience with newer front end technologies has put me at the forefront of our integration efforts with Ascentis at large.
+		</div>
 	</div>
-	<div class="eight wide column"></div>
-	<div class="twleve wide column">
-		At present, I'm working towards a degree in Information Systems and am expecting to graduate in Spring on 2016. While I only have a handful of credits left to complete, Information Systems requires two sequential capstone courses which forces me into an extra semester.
+
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="seven wide column">
+			I hope to maintain my position at Ascentis throughout my schooling, and continue there for some time after graduating. While I currently exist as a developer, I seek to move into management at some point which Ascentis may or may not be able to provide. Regardless, the experience I gather there will help me in my career.
+		</div>
 	</div>
-	<div class="eight wide column"></div>
-	<div class="eight wide column">
-		Additionally, I am employed by a company in downtown Jacksonville called Ascentis. Formerly Starfield, we were recently purchased and are growing exponentially. I am employed as a Software Engineer and spend my time working with our .NET application. We are a small company and my experience with newer front end technologies has put me at the forefront of our integration efforts with Ascentis at large.
+
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="seven wide column">
+			<i class="calendar icon"></i>
+			<h2>Class Schedule</h2>
+		</div>
+		<div class="six wide column">
+			<h2>Favorite Websites</h2>
+		</div>
 	</div>
-	<div class="eight wide column"></div>
-	<div class="eight wide column">
-		I hope to maintain my position at Ascentis throughout my schooling, and continue there for some time after graduating. While I currently exist as a developer, I seek to move into management at some point which Ascentis may or may not be able to provide. Regardless, the experience I gather there will help me in my career.
-	</div>
-	<div class="four wide column"></div>
-	<div class="sixteen wide column">
-		<h3>Favorite Websites</h3>
-	</div>
-	<div class="four wide column">
-		<i class="circle icon"></i>
-		<a href="http://www.reddit.com/" target="_blank">Reddit</a>
-	</div>
-	<div class="four wide column">
-		<i class="circle icon"></i>
-		<a href="http://dayoftheshirt.com/" target="_blank">Day of the Shirt</a>
-	</div>
-	<div class="four wide column">
-		<i class="circle icon"></i>
-		<a href="http://www.thehelper.net/" target="_blank">TheHelper</a>
-	</div>
-	<div class="sixteen wide column">
-		<i class="calendar icon"></i>
-		<h3>Class Schedule</h3>
-	</div>
-	<div class="two column row">
-		<div class="column">
+
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="seven wide column">
 			ACG 2021: Principles of Financial Accounting: Monday/Wednesday, 1:30pm-2:45pm
 		</div>
-		<div class="column">
+		<div class="six wide column">
+			<i class="circle icon"></i>
+			<a href="http://www.reddit.com/" target="_blank">Reddit</a>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="seven wide column">
 			ISM 4011: Introduction to Management Information Systems: Monday/Wednesday, 3pm-4:15pm
 		</div>
-		<div class="column">
+		<div class="six wide column">
+			<i class="circle icon"></i>
+			<a href="http://dayoftheshirt.com/" target="_blank">Day of the Shirt</a>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="seven wide column">
 			WOH 1012: World History I: Online
 		</div>
-		<div class="column">
+		<div class="six wide column">
+			<i class="circle icon"></i>
+			<a href="http://www.thehelper.net/" target="_blank">TheHelper</a>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="five wide column">
 			COP 4813: Internet Programming: Online
 		</div>
-		<div class="column">
+	</div>
+
+	<div class="row">
+		<div class="three wide column"></div>
+		<div class="five wide column">
 			Work: Tuesday/Thursday/Friday, 10AM-6PM
 		</div>
-	</div>-->
+	</div>
 </div>
