--- a/index.html
+++ b/index.html
@@ -5,56 +5,18 @@
 		<script src="assets/semantic.min.js" type="text/javascript"></script>
 		<script src="HomeViewModel.js" type="text/javascript"></script>
 		<script src="HomeViewController.js" type="text/javascript"></script>
-		<!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.7.3/semantic.css" />-->
+
 		<link rel="stylesheet" href="assets/semantic.min.css" />
 		<link rel="stylesheet" href="style.css" />
+
 		<title data-bind="text: pageTitle"></title>
+
+		<div class="javascriptContainer"></div>
+		<div class="cssContainer"></div>
 	</head>
 	<body>
 		<div class="ui top attached inverted menu">
-			<div class="ui dropdown item">
-				<div class="text">
-					<i class="home icon"></i> Home
-				</div>
-				<i class="dropdown icon"></i>
-				<div class="menu">
-					<a class="item home" data-route="">
-						<i class="home icon"></i>
-						<span>Home</span>
-					</a>
-
-					<div class="header">Assignments</div>
-
-					<a class="item assign1" data-route="assign1/index2.html">
-						<i class="circle thin icon"></i>
-						<span>Assignment 1</span>
-					</a>
-					<a class="item assign2" data-route="assign2/index.html">
-						<i class="circle thin icon"></i>
-						<span>Assignment 2</span>
-					</a>
-					<a class="item assign3" data-route="assign3/index.html">
-						<i class="circle thin icon"></i>
-						<span>Assignment 3</span>
-					</a>
-					<a class="item assign4" data-route="assign4/index.html">
-						<i class="circle thin icon"></i>
-						<span>Assignment 4</span>
-					</a>
-					<a class="item assign5" data-route="assign5/index.html">
-						<i class="thin circle icon"></i>
-						<span>Assignment 5</span>
-					</a>
-				</div>
-			</div>
-
-			<div class="right menu">
-				<div class="item">
-					Krishna Glick
-				</div>
-				<div class="item">
-					ePortfolio for COP 4813: Internet Programming
-				</div>
+			<div class="ui dropdown centered item navigationContent">
 			</div>
 		</div>
 
