--- a/NavigationContent.html
+++ b/NavigationContent.html
@@ -1,34 +1,38 @@
-<div class="text">
-	<i class="home icon"></i> Home
-</div>
-<i class="dropdown icon"></i>
+<div class="ui top attached inverted menu">
+	<div class="ui dropdown item">
+		<div class="text">
+			<i class="home icon"></i> Home
+		</div>
+		<i class="dropdown icon"></i>
 
-<div class="menu">
-	<a class="item home" data-route="HomeContent.html">
-		<i class="home icon"></i>
-		<span>Home</span>
-	</a>
+		<div class="menu">
+			<a class="item home" data-route="HomeContent.html">
+				<i class="home icon"></i>
+				<span>Home</span>
+			</a>
 
-	<div class="header">Assignments</div>
+			<div class="header">Assignments</div>
 
-	<a class="item assign1" data-route="assign1/index2.html">
-		<i class="circle thin icon"></i>
-		<span>Assignment 1</span>
-	</a>
-	<a class="item assign2" data-route="assign2/index.html">
-		<i class="circle thin icon"></i>
-		<span>Assignment 2</span>
-	</a>
-	<a class="item assign3" data-route="assign3/index.html">
-		<i class="circle thin icon"></i>
-		<span>Assignment 3</span>
-	</a>
-	<a class="item assign4" data-route="assign4/index.html">
-		<i class="circle thin icon"></i>
-		<span>Assignment 4</span>
-	</a>
-	<a class="item assign5" data-route="assign5/index.html">
-		<i class="circle thin icon"></i>
-		<span>Assignment 5</span>
-	</a>
+			<a class="item assign1" data-route="assign1/index2.html">
+				<i class="circle thin icon"></i>
+				<span>Assignment 1</span>
+			</a>
+			<a class="item assign2" data-route="assign2/index.html">
+				<i class="circle thin icon"></i>
+				<span>Assignment 2</span>
+			</a>
+			<a class="item assign3" data-route="assign3/index.html">
+				<i class="circle thin icon"></i>
+				<span>Assignment 3</span>
+			</a>
+			<a class="item assign4" data-route="assign4/index.html">
+				<i class="circle thin icon"></i>
+				<span>Assignment 4</span>
+			</a>
+			<a class="item assign5" data-route="assign5/index.html">
+				<i class="circle thin icon"></i>
+				<span>Assignment 5</span>
+			</a>
+		</div>
+	</div>
 </div>
