--- a/assign1/index2.html
+++ b/assign1/index2.html
@@ -46,8 +46,7 @@
 	<div class="row">
 		<div class="three wide column"></div>
 		<div class="seven wide column">
-			<i class="calendar icon"></i>
-			<h2>Class Schedule</h2>
+			<h2><i class="calendar icon"></i>Class Schedule</h2>
 		</div>
 		<div class="six wide column">
 			<h2>Favorite Websites</h2>
