--- a/index.html
+++ b/index.html
@@ -15,13 +15,10 @@
 		<div class="cssContainer"></div>
 	</head>
 	<body>
-		<div class="ui top attached inverted menu">
-			<div class="ui dropdown centered item navigationContent">
-			</div>
-		</div>
 
-		<div class="assignmentSpace">
-		</div>
+		<div class="navigationContent"></div>
+
+		<div class="assignmentSpace"></div>
 
 	</body>
 </html>
