--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 				<a href="assign2/index.html">Assignment 2</a>
 			</h2>
 			
+			<p>
+				Assign 2 introduces users to basic javascript and several html elements.
+			</p>
+			
+			<ul>
+				<li>Objective 1: Introduce students to various html elements</li>
+				<li>Objective 2: Show ability to code in basic javascript</li>
+				<li>Objective 3: Creatively build a form and handle data</li>
+			</ul>
+			
 			<hr>
 		</div>
 	</body>
