Days of the week are not vehicles.

--- a/assign2/index.html
+++ b/assign2/index.html
@@ -31,13 +31,13 @@
 				<input type="radio" name="sex" value="female" id="sexFemale" class="grid-6">
 				<span class="grid-8">Female</span><br>
 				<span>Days Available for Work</span><br>
-				<label><input type="checkbox" name="vehicle" value="Mon" id="mon">Mon</label>
-				<label class="grid-5"><input type="checkbox" name="vehicle" value="Tue" id="tue">Tue</label>
-				<label class="grid-10"><input type="checkbox" name="vehicle" value="Wed" id="wed">Wed</label>
-				<label class="grid-15"><input type="checkbox" name="vehicle" value="Thr" id="thr">Thr</label>
-				<label class="grid-20"><input type="checkbox" name="vehicle" value="Fri" id="fri">Fri</label>
-				<label class="grid-25"><input type="checkbox" name="vehicle" value="Sat" id="sat">Sat</label>
-				<label class="grid-30"><input type="checkbox" name="vehicle" value="Sun" id="sun">Sun</label><br>
+				<label><input type="checkbox" value="Mon" id="mon">Mon</label>
+				<label class="grid-5"><input type="checkbox" value="Tue" id="tue">Tue</label>
+				<label class="grid-10"><input type="checkbox" value="Wed" id="wed">Wed</label>
+				<label class="grid-15"><input type="checkbox" value="Thr" id="thr">Thr</label>
+				<label class="grid-20"><input type="checkbox" value="Fri" id="fri">Fri</label>
+				<label class="grid-25"><input type="checkbox" value="Sat" id="sat">Sat</label>
+				<label class="grid-30"><input type="checkbox" value="Sun" id="sun">Sun</label><br>
 				<span>Preferred Time of Day</span><br>
 				<select id="timeOfDay">
 					<option value="Morning">Morning</option>
