Refactored some of assign 1, began work on assign 2 refactor

--- a/NavigationContent.html
+++ b/NavigationContent.html
@@ -13,11 +13,11 @@
 
 			<div class="header">Assignments</div>
 
-			<a class="item assign1" data-route="assign1/index2.html">
+			<a class="item assign1" data-route="assign1/AboutMeContent.html">
 				<i class="circle thin icon"></i>
 				<span>Assignment 1</span>
 			</a>
-			<a class="item assign2" data-route="assign2/index.html">
+			<a class="item assign2" data-route="assign2/JobApplicationContent.html">
 				<i class="circle thin icon"></i>
 				<span>Assignment 2</span>
 			</a>
