Three was pretty easy to convert over!

--- a/NavigationContent.html
+++ b/NavigationContent.html
@@ -21,7 +21,7 @@
 				<i class="circle thin icon"></i>
 				<span>Assignment 2</span>
 			</a>
-			<a class="item assign3" data-route="assign3/index.html">
+			<a class="item assign3" data-route="assign3/StatisticsContent.html">
 				<i class="circle thin icon"></i>
 				<span>Assignment 3</span>
 			</a>
