Assign 4 now works! On to assignment 5, for the glory of the Sontaran Empire!

--- a/NavigationContent.html
+++ b/NavigationContent.html
@@ -25,7 +25,7 @@
 				<i class="circle thin icon"></i>
 				<span>Assignment 3</span>
 			</a>
-			<a class="item assign4" data-route="assign4/index.html">
+			<a class="item assign4" data-route="assign4/BeautifulCanvasContent.html">
 				<i class="circle thin icon"></i>
 				<span>Assignment 4</span>
 			</a>
