Working towards a login/register setup for project five.

--- a/NavigationContent.html
+++ b/NavigationContent.html
@@ -35,4 +35,19 @@
 			</a>
 		</div>
 	</div>
+
+	<div class="right menu">
+		<div class="item" data-bind="click: login">
+			<i class="sign in icon"></i> Login
+		</div>
+		<div class="item" data-bind="click: register">
+			<i class="child icon"></i> Register
+		</div>
+		<div class="item">
+			<span data-bind="text: username">TestUser</span>
+		</div>
+		<div class="item" data-bind="click: logout">
+			<i class="sign out icon"></i> Logout
+		</div>
+	</div>
 </div>
