--- a/assign2/JobApplicationContent.html
+++ b/assign2/JobApplicationContent.html
@@ -1,7 +1,7 @@
 <div class="ui centered grid">
 	<div class="eight wide column">
 		<div class="ui form">
-			<div class="ui message hidden">
+			<div class="ui message hidden" id="jobAppMessage">
 				<div class="header" data-bind="text: alertTitle"></div>
 				<p data-bind="html: alertMessage"></p>
 				<i class="close icon" onclick="$('.ui.message').hide();"></i>
@@ -92,4 +92,4 @@
 </div>
 
 <script type="text/javascript" src="assign2/JobApplicationViewModel.js"></script>
-<script type="text/javascript" src="assign2/JobApplicationController.js"></script>
+<script type="text/javascript" src="assign2/JobApplicationViewController.js"></script>
