Improved login/register/logout menu buttons. Added a bunch of setup to frontend of the stock portfolio. I have a list of stocks with some data on each. Unsure how I want to handle it all but the basics are in place. Additionally I'm grabbing semantic.css from a CDN because the schools system doesn't work like an HTTP server, only static files. Apparently.
Also loaded highcharts into the project, fun things will be done with that.

--- a/NavigationContent.html
+++ b/NavigationContent.html
@@ -29,7 +29,7 @@
 				<i class="circle thin icon"></i>
 				<span>Assignment 4</span>
 			</a>
-			<a class="item assign5" data-route="assign5/index.html">
+			<a class="item assign5" data-route="assign5/StockPortfolioContent.html">
 				<i class="circle thin icon"></i>
 				<span>Assignment 5</span>
 			</a>
@@ -38,10 +38,10 @@
 
 	<div class="right menu">
 		<span data-bind="visible: authTicket() == ''">
-			<div class="item" id="navLogin">
+			<div class="link item" id="navLogin">
 				<i class="sign in icon"></i> Login
 			</div>
-			<div class="item" id="navRegister">
+			<div class="link item" id="navRegister">
 				<i class="child icon"></i> Register
 			</div>
 		</span>
