--- a/assign5/StockPortfolioContent.html
+++ b/assign5/StockPortfolioContent.html
@@ -1,10 +1,58 @@
-<div class="ui grid">
-	<div class="four wide column"></div>
-	
-	<div class="twelve wide column">
-		<span id="test"></span>
+<div class="ui green vertical segment">
+	<div class="ui grid">
+		<div class="two wide column">
+			<div class="ui horizontal segment">
+				<div class="ui vertical menu" id="stockPortfolioMenu">
+					<div class="item"></div>
+					<a class="active green item" data-selection="#myPortfolio">
+						My Portfolio
+					</a>
+					<a class="green item" data-selection="#buySell">
+						Buy/Sell
+					</a>
+					<a class="green item" data-selection="#statistics">
+						Statistics
+					</a>
+					<div class="item"></div>
+				</div>
+			</div>
+		</div>
+
+		<div class="twelve wide column" id="myPortfolio">
+			<div class="ui horizontal segment">
+				<div class="ui grid">
+					<div class="three wide column">
+						<div class="ui basic segment">
+							<span data-bind="foreach: myStocks">
+								<div class="ui toggle button" data-bind="click: function() {$root.addToChart($data, $element, $root)}">
+									<span data-bind="text: name"></span>
+									<i class="external share icon"></i>
+								</div>
+							</span>
+						</div>
+					</div>
+					<div class="eleven wide column">
+						<!-- <div id="myStocksChart" style="width:100%; height:400px;"></div> -->
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="twelve wide column" id="buySell" style="display: none">
+			<div class="ui horizontal segment">
+				<div class="ui stackable eight column grid" data-bind="foreach: stocksList">
+					<div class="column">
+						<span data-bind="text: Company"></span>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</div>
 </div>
 
+
+<script src="assign5/StockList.js" type="text/javascript"></script>
 <script src="assign5/StockPortfolioViewModel.js" type="text/javascript"></script>
 <script src="assign5/StockPortfolioViewController.js" type="text/javascript"></script>
+<!--<script src="assets/highcharts.js" type="text/javascript"></script>-->
