--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<script src="HomeViewModel.js" type="text/javascript"></script>
 		<script src="HomeViewController.js" type="text/javascript"></script>
 
-		<link rel="stylesheet" href="assets/semantic.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.8.1/semantic.min.css" />
 		<link rel="stylesheet" href="style.css" />
 
 		<title data-bind="text: pageTitle"></title>
